--- a/src/mainModule/components/AuthPage.scss
+++ b/src/mainModule/components/AuthPage.scss
@@ -30,7 +30,8 @@
 }
 
 .authPageEmailField,
-.authPagePasswordField {
+.authPagePasswordField,
+.authPageNameField {
     margin: 5px 0;
     width: 100%;
     height: 30px;
